Fix text alignment in title component

--- a/src/app/shared/components/title/title.component.css
+++ b/src/app/shared/components/title/title.component.css
@@ -32,4 +32,5 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
